--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>TYM</title>
+  <meta charset="UTF-8">
+</head>
+<body>
+  <h1>htmltest</h1>
+  <p>hugahuga</p>
+</body>
+</html>
