--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-  <title>TYM</title>
+  <title>TimeLineCreator</title>
   <meta charset="UTF-8">
 </head>
 <body>
-  <h1>htmltest</h1>
+  <h1>TimeLineCreator</h1>
   <p>hugahuga</p>
 </body>
 </html>
